public/stylesheets/style.css
:root {
    --fontstyle: 'Poppins', sans-serif, 'Lato', sans-serif, "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
    --accentRoze: #f72585;
    --grijs: #f1f2f0;
    --accentDonkerBlauw: #3a0ca3;
    --accentMidBlauw: #4361ee;
    --accentLichtBlauw: #4cc9f0;
    --wit: #ffffff;
    --zwart: #000000;
    --accentPaars: #7209b7;
    --vlakPaars: rgba(255, 255, 255, 0.2);
}

html {
    margin: 0px;
    max-height: auto;
    scroll-behavior: smooth;
    background-color: var(--grijs);
    background: rgb(247, 37, 133);
    background:
        /* linear-gradient(48deg, rgba(247,37,133,1) 0%, rgba(114,9,183,1) 15%, rgba(58,12,163,1) 50%, rgba(67,97,238,1) 85%, rgba(76,201,240,1) 100%);  */
        linear-gradient(205deg, #4361ee 0%, #435fec 0%, #3a0ca3 23.7%, #7209b7 56.2%, #f72585 150%);
    height: 100vh;
    width: 100vw;
}


/**========================================================================
 *                           Body
 *========================================================================**/

body {
    width: 100%;
    height: 100vh;
    font-family: var(--fontstyle);
    color: rgb(0, 0, 0);
    text-align: center;
    display: grid;
    grid-template-columns: 1fr 3fr 1fr;
    grid-template-rows: auto 6fr 1fr;
    grid-template-areas:
        "header header header"
        ". main ."
        "footer footer footer";
    justify-content: stretch;
    gap: 1.5em 0px;
    margin: 0 auto 0 auto;
    text-decoration: none;
    text-decoration-line: none;
    justify-content: center;
}


/**========================================================================
 *                           Header
 *========================================================================**/

header {
    grid-area: header;
    display: grid;
    grid-template-columns: 1fr 6fr 1fr;
    grid-template-rows: 1fr;
    /* background-color: var(--grijs); */
    height: auto;
    justify-content: center;
    align-items: center;
    font-size: 120%;

}

header nav {
    grid-column: 2 / 2;
    grid-row: 1;
}

header nav ul {
    padding: 0;
    display: flex;
    flex-direction: row;
    justify-content: center;
    list-style-type: none;

}

header nav li a {
    color: var(--zwart);
    display: block;
    font-size: 1em;
    font-weight: bold;
    letter-spacing: 1px;
    margin: 0 0.9em;
    padding: 0.4em 0.2em;
    position: relative;
    text-decoration: none;
    text-transform: uppercase;
    transition: all 0.5s ease;
    -webkit-transition: all 0.5s ease;
}

header nav li a:before,
header nav li a:after {
    content: '';
    position: absolute;
    width: 7px;
    height: 0%;
    left: -0.5em;
    border-radius: 85px 85px 85px 85px;
}

header nav li a:before {
    bottom: 0;
    transition: 0.5s;
}

header nav li a:after {
    background: var(--accentLichtBlauw);
    top: 0;
}

header nav li a:hover:before {
    background: var(--accentLichtBlauw);
    height: 100%;
    transition: height 0.5s cubic-bezier((0.22, 0.61, 0.36, 1));
}

header nav li a.active:before,
header nav li a.active:after {
    content: '';
    position: absolute;
    width: 7px;
    height: 100%;
    left: -0.5em;
    border-radius: 85px 85px 85px 85px;
    bottom: 0;
    background: var(--accentLichtBlauw);
}

.sticky {
    position: fixed;
    top: 0;
    width: 100%;
}


/**========================================================================
 *                           Main Home
 *========================================================================**/

main {
    grid-area: main;
}

footer {
    grid-area: footer;
}


/**========================================================================
 *                           Main MyProfile
 *========================================================================**/

main.myProfile-main {
    display: grid;
}

div#myProfile-container {
    display: grid;
    grid-template-columns: 0.1fr 1.25fr 0.65fr 1fr 1fr;
    grid-template-rows: 0.2fr 1fr 1fr 1.2fr 1.2fr 1.2fr 1.2fr;
    grid-template-areas:
        ". . . image image"
        ". name button image image"
        ". age . image image"
        ". moodsHeading moodsHeading image image"
        ". moods moods image image"
        ". favSongsHeading favSongsHeading image image"
        ". favSongs favSongs image image";
    background-color: var(--wit);
    margin: 0 0 2em 0;
    align-items: center;
    justify-items: start;
    box-shadow: 3px 3px 5px 0px rgba(0, 0, 0, 0.75);
    border-radius: 30px;
    min-width: 45em;
}

div#myProfile-container img {
    grid-area: image;
    width: 100%;
    max-width: 100%;
    max-height: 25em;
    height: 100%;
    min-width: 15em;
    min-height: 22em;
    border-radius: 0 30px 30px 0;
}

div#myProfile-container h2 {
    grid-area: name;
    color: var(--accentMidBlauw);
    font-size: 2em;
    align-self: start;
    margin: 0;
    font-weight: bold;
    margin-bottom: -0.5em;
}

div#myProfile-container p:nth-of-type(1) {
    grid-area: age;
    align-self: start;
    margin: 0 0 -0.5em;
}

div#myProfile-container p:nth-of-type(2) {
    grid-area: favSongsHeading;
    font-weight: 700;
    padding: 0.1em 0.5em;
    border-radius: 9px;
    margin: 0.5em 0 -0.5em;
    align-self: start;

    background: 
    linear-gradient(100deg,
    var(--accentMidBlauw) 30%,
    var(--accentLichtBlauw) 100%);
    color: var(--wit);
}

div#myProfile-container p:nth-of-type(3) {
    grid-area: favSongs;
    margin: 0;
    align-self: start;
}

div#myProfile-container p:nth-of-type(4) {
    grid-area: moodsHeading;
    font-weight: 700;
    padding: 0.1em 0.5em;
    border-radius: 9px;
    margin: 0.5em 0 -0.5em;
    align-self: start;

    background: 
    linear-gradient(100deg,
    var(--accentMidBlauw) 30%,
    var(--accentLichtBlauw) 100%);
    color: var(--wit);
}

div#myProfile-container p:nth-of-type(5) {
    grid-area: moods;
    margin: 0;
    align-self: start;
}
/* ... */

